--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.DistanceActivity"></activity>
+        <activity android:name=".activities.DistanceActivity" />
     </application>
 
 </manifest>
