Starting points method. Point class and PointMethodActivity created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.DistanceActivity" />
+        <activity android:name=".activities.PointMethodActivity" />
         <activity
             android:name=".activities.DistanceParametersActivity"
             android:label="@string/title_activity_distance_parameters"
