--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.albert.measure">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.AddPointActivity"></activity>
+        <activity android:name=".activities.AddVectorActivity" />
         <activity android:name=".activities.AddElementActivity" />
         <activity
             android:name=".activities.ResultsActivity"
@@ -33,8 +35,7 @@
             android:label="@string/title_activity_distance_parameters"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.AddPointActivity" />
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
