--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.albert.measure">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.AddAreaActivity"></activity>
         <activity android:name=".activities.AddVectorActivity" />
         <activity android:name=".activities.AddElementActivity" />
         <activity
@@ -38,5 +37,7 @@
         <activity android:name=".activities.AddPointActivity" />
         <activity android:name=".activities.AddAngleActivity" />
     </application>
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
