--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.albert.measure">
 
     <application
@@ -8,8 +9,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.AddAreaActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.AboutUsActivity"></activity>
+        <activity android:name=".activities.AddAreaActivity" />
         <activity android:name=".activities.AddVectorActivity" />
         <activity android:name=".activities.AddElementActivity" />
         <activity
@@ -20,7 +23,7 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,6 +34,7 @@
         <activity android:name=".activities.AddPointActivity" />
         <activity android:name=".activities.AddAngleActivity" />
         <activity android:name=".activities.AddVolumeActivity" />
+        <activity android:name=".activities.SensorTestActivity" />
     </application>
 
     <uses-permission android:name="android.permission.CAMERA" />
