--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.AboutUsActivity"></activity>
+        <activity android:name=".activities.HeightActivity"></activity>
+        <activity android:name=".activities.AboutUsActivity" />
         <activity android:name=".activities.AddAreaActivity" />
         <activity android:name=".activities.AddVectorActivity" />
         <activity android:name=".activities.AddElementActivity" />
