--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
         <activity android:name=".activities.AddElementActivity" />
         <activity
             android:name=".activities.ResultsActivity"
-            android:label="@string/title_activity_results"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/ResultsAppTheme"/>
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
