--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/tasks.xml
+/.idea/gradle.xml
+/.idea/dictionaries
 .DS_Store
 /build
 /captures
